--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "ember-emoji-picker",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Emoji picker for ember",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "emoji",
+    "ember",
+    "emojipicker",
+    "emoji picker"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Vitaliy Petrenko",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -14,19 +18,26 @@
   "repository": "",
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
+    "start": "ember server -p 4211",
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "detect-emoji-support": "^0.1.6",
+    "ember-browserify": "^1.2.2",
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-less": "^2.0.1",
+    "ember-cli-nanoscroll": "^0.1.5",
+    "emojilib": "^2.3.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.16.2",
+    "ember-cli-autoprefixer": "^0.8.1",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
-    "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
@@ -38,6 +49,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "ember-truth-helpers": "^2.1.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
