--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-less": "^3.0.1",
     "ember-local-storage": "^1.7.2",
-    "emojilib": "^2.4.0"
+    "emojilib": "^2.4.0",
+    "@glimmer/tracking": "^1.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "broccoli-asset-rev": "^3.0.0",
